Fix jumping website name, logo

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 
 html,
 body {
+  font-size: 10px;
   position: relative;
   width: 100%;
   min-height: 100vh;
@@ -40,8 +41,9 @@ body {
 }
 
 .website-name {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 700;
+  margin: 4px 0 4px 0;
 }
 
 .links {
